--- a/beneficiario/src/app/layout/footer/footer.component.scss
+++ b/beneficiario/src/app/layout/footer/footer.component.scss
@@ -4,9 +4,11 @@
     background-color: rgb(80, 131, 80);
     padding: 10px;
     position: fixed; /* Alterado de 'bottom' para 'fixed' */
+    bottom: 10px;
+    
     left: 0;
     bottom: 0;
-    width: 100%;
+    width: 100vw;
 }
 
 img{
