--- a/beneficiario/src/app/pages/login/login.component.html
+++ b/beneficiario/src/app/pages/login/login.component.html
@@ -9,8 +9,8 @@
           <input type="password" placeholder="Senha"/>
 
           <div class="botoes">
-              <a href="" class="esqueci" routerlink="../home">Esqueci minha senha</a>
-              <button>Entrar</button>
+              <a href="" class="esqueci" >Esqueci minha senha</a>
+              <a routerLink="/home"><button >Entrar</button></a>
 
         </div>
       </form>
