--- a/beneficiario/src/app/pages/home/home.component.html
+++ b/beneficiario/src/app/pages/home/home.component.html
@@ -1,5 +1,12 @@
-<h1>Avisos</h1>
 
+<div class="avisos">
+    
+    
+    <h1>Avisos</h1>
+
+
+
+</div>
     <div class="cards">
 
         <div class="card">
