--- a/beneficiario/src/app/layout/header/header.component.html
+++ b/beneficiario/src/app/layout/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="head">
     <div class=headContent>
 
-        <img src="../assets/img/logoics.png" class="logo">
+        <a routerLink="/home"><img src="../assets/img/logoics.png" class="logo" ></a>
         <h1>Beneficiario</h1>
         <img src="../assets/img/usuPerfil.png" class="logo">
     </div>
