--- a/beneficiario/src/app/pages/home/home.component.html
+++ b/beneficiario/src/app/pages/home/home.component.html
@@ -1,32 +1,22 @@
+<app-menu />
 
-<div class="avisos">
-    
-    
-    <h1>Avisos</h1>
+<h1>Painel de Controle</h1>
 
+
+<div class="section">
+    <div class="painel">
+        <h4>Consultas</h4>
+        <img src="../../../assets/img/farmacia.png" style="width: 50px; opacity: 70%;">
+    </div>
+    <div class="painel">
+        <h4>Pagamentos</h4>
+        <img src="../../../assets/img/farmacia.png" style="width: 50px; opacity: 70%;">
+    </div>
+    <div class="painel">
+        <h4>Protocolos</h4>
+        <img src="../../../assets/img/farmacia.png" style="width: 50px; opacity: 70%;">
+    </div>
 
 
 </div>
-    <div class="cards">
-
-        <div class="card">
-            
-            <img src="../assets/img/avisos.png" alt="">
-
-        </div>
-        <div class="card">
-            
-            <img src="../assets/img/avisos.png" alt="">
-
-        </div>
-        <div class="card">
-            
-            <img src="../assets/img/avisos.png" alt="">
-
-        </div>
-        <div class="card">
-            
-            <img src="../assets/img/avisos.png" alt="">
-
-        </div>
-    </div>
+ 
