--- a/beneficiario/src/app/pages/login/login.component.html
+++ b/beneficiario/src/app/pages/login/login.component.html
@@ -10,7 +10,7 @@
 
           <div class="botoes">
               <a href="" class="esqueci" >Esqueci minha senha</a>
-              <a routerLink="/home"><button >Entrar</button></a>
+              <a routerLink="/avisos"><button >Entrar</button></a>
 
         </div>
       </form>
