--- a/beneficiario/src/app/layout/footer/footer.component.scss
+++ b/beneficiario/src/app/layout/footer/footer.component.scss
@@ -3,7 +3,8 @@
     text-align: center;
     background-color: rgb(80, 131, 80);
     padding: 10px; /* Alterado de 'bottom' para 'fixed' */
-    bottom: 10px;
+    bottom: 0px;
+    position: fixed;
     
     left: 0;
     bottom: 0;
@@ -20,4 +21,4 @@ img{
     margin: auto;
 }
 
-//estou na mesma agora no tedio sem oq pensar ou fazer, faltam 48 minutos para eu ir para casa mais ou menos e a unica coisa que eu pensa é em dormir de boa, mandar um rteino e dormir pq am já é sexta feira e eu vou ter que estudar p crl ent fou dormir cedo por que estou tão entediado? eu estava super feliz fazendo as parada agora quero me matar de leves. Fazer isso me ajuda muito por minha cabeca para de pensar nas parada e eu saio do parafuso e tambem estou treinando digitar mais rapido o que tambem é otimo para mim para ficar fapido de escrever e agilizar o processo pois quando eu sei o que estou escrevendo fica mais facil e até consigo fazer sem olhar para o teclado mas como estou pensando na hora o que estou falando fica mais dificl de fazer essa bosta sem ver pois é dificil pensar no que escrever e sem olhar ao mesmo tempo mas quando eu consigo é muto legal fazer isso
+//estou na mesma agora no tedio sem oq pensar ou fazer, faltam 48 minutos para eu ir para casa mais ou menos e a unica coisa que eu pensa é em dormir de boa, mandar um rteino e dormir pq am já é sexta feira e eu vou ter que estudar p crl ent fou dormir cedo por que estou tão entediado? eu estava super feliz fazendo as parada agora quero me matar de leves. Fazer isso me ajuda muito por minha cabeca para de pensar nas parada e eu saio do parafuso e tambem estou treinando digitar mais rapido o que tambem é otimo para mim para ficar fapido de escrever e agilizar o processo pois quando eu sei o que estou escrevendo fica mais facil e até consigo fazer sem olhar para o teclado mas como estou pensando na hora o que estou falando fica mais dificl de fazer essa bosta sem ver pois é dificil pensar no que escrever e sem olhar ao mesmo tempo mas quando eu consigo é muto legal fazer isso. Mais um dia de tedio sem fazer nada e acho meio vagabundo mas esse fim de semana vou ficar de boa para conseguir comecar a semana bem 
