--- a/beneficiario/src/app/pages/home/home.component.scss
+++ b/beneficiario/src/app/pages/home/home.component.scss
@@ -1,33 +1,59 @@
-body{
-    text-align: center;
+.section{
+
+    padding: 15px;
     margin: auto;
-}
-
-
-.avisos{
     text-align: center;
-}
-
-.cards{
     display: flex;
     flex-wrap: wrap;
-    width: auto;
-    align-items: center;
-    margin-bottom: 10vh;
     
-
-    .card{ 
-        border-radius: 10px;
-        padding: 15px;
-        background-color: rgb(80, 131, 80);
-        justify-content: space-between;
-        margin: auto;
-        margin-top: 10px;
-        margin-bottom: 20px;
-        
-
-        img{
-            max-width: 300px;
-        }
-    }
 }
+
+img{
+
+    margin: 20px;
+}
+
+.painel{
+    border-radius: 10px;
+    background-color: rgb(80, 131, 80);
+    padding: 15px;
+    width: 100px;
+    height: 150px;
+    margin: auto;
+
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+//novamente na de parecer que estou trabalhando por que estou com uma puta dor de cabeca que merda n aguento mais preciso urgente ir para casa caralho nmrl estou aqui igual um idiota sem fazer nada por que 
