mudança de cores e coizarada

--- a/beneficiario/src/app/layout/footer/footer.component.html
+++ b/beneficiario/src/app/layout/footer/footer.component.html
@@ -1,12 +1,33 @@
 <div class=footContent>
 
-    <div class="dowload">
+    <div class="capsulas" >
+        <h2>Endereço</h2>
+        <h4>Instituto Curitiba de Saúde – ICS <br>
+            CNPJ: 03.518.900/0001-13 <br>
+            Rua Santo Antônio, 400 – Rebouças <br>
+            Curitiba/PR – CEP 80.230-120 <br>
+            Funcionamento: Seg a Sex das 07h às 19h <br>
+            Email: ics&#64;ics.curitiba.pr.gov.br</h4>
 
-        <a href="https://play.google.com/store/apps/details?id=com.genexus.appics.appics&pli=1"><img src="../../../assets/img/android1.png" alt=""></a>
+    </div>  
+
+
+    <div class="capsulas">
+        <div class="dowload">
+
+            <a href="https://play.google.com/store/apps/details?id=com.genexus.appics.appics&pli=1"><img src="../../../assets/img/android1.png" alt=""></a>
+            
+            <a href="https://apps.apple.com/br/app/instituto-curitiba-sa%C3%BAde-ics/id1456127008"><img src="../../../assets/img/ios.png" alt=""></a>
+        </div>
         
-        <a href="https://apps.apple.com/br/app/instituto-curitiba-sa%C3%BAde-ics/id1456127008"><img src="../../../assets/img/ios.png" alt=""></a>
     </div>
-    <h4>Todos os direitos reservados para Adriano Vale junto ao ICS</h4>
-</div>
 
+    
+    <div class="capsulas">
+        <img src="../../../assets/img/certi-ANS.png" alt="">
+        <h4> ANS: 0800-701-9656 / Nº 41901-0</h4>
+
+    </div>    
+</div>
+ 
 
