--- a/beneficiario/src/app/layout/header/header.component.scss
+++ b/beneficiario/src/app/layout/header/header.component.scss
@@ -2,9 +2,9 @@
 
     .headContent{
     
-        background-color: rgb(80, 131, 80);
+        background-color: #00A65A;
         margin: 0;
-        padding: 10px;
+        padding: 30px;
         display: flex;
 
         .logo{
