--- a/beneficiario/src/app/layout/menu/menu.component.html
+++ b/beneficiario/src/app/layout/menu/menu.component.html
@@ -1,15 +1,41 @@
-<div class="topnav">
+<div class="navbar">
+    <a href="https://ics.curitiba.org.br/" target="_blank"> <strong>ICS</strong> Beneficiario </a>
     <a routerLink="/home">Painel de Controle</a>
-    <a routerLink="">Consultas</a>
+    <a routerLink="/consultas">Consultas</a>
     <a routerLink="/avisos">Avisos</a>
-    <a routerLink="">Pagamentos</a>
-    <a routerLink="">Ajuda</a>
-    <a routerLink="">Protocolos</a>
-    <a routerLink="">Contato</a>
-    <a routerLink="" style="text-align: right;">Perfil</a>
+    <a routerLink="/pagamentos">Pagamentos</a>
+    <a routerLink="/ajuda">Ajuda</a>
+    <a routerLink="/protocolos">Protocolos</a>
+    <a routerLink="/contato">Contato</a>
+    <a routerLink="/perfil">Perfil</a>
 
 
 
-    
+     
 
   </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+  
