--- a/beneficiario/src/app/pages/home/home.component.html
+++ b/beneficiario/src/app/pages/home/home.component.html
@@ -1,22 +1,24 @@
 <app-menu />
 
-<h1>Painel de Controle</h1>
+<h1 style="text-align: center; margin: 50px;">Painel de Controle</h1>
 
 
 <div class="section">
     <div class="painel">
-        <h4>Consultas</h4>
-        <img src="../../../assets/img/farmacia.png" style="width: 50px; opacity: 70%;">
+        
+        <h2>Consultas</h2>
+        <img src="../../../assets/img/icones/doutor.png" style="width: 100px;">
     </div>
     <div class="painel">
-        <h4>Pagamentos</h4>
-        <img src="../../../assets/img/farmacia.png" style="width: 50px; opacity: 70%;">
+        <h2>Pagamentos</h2>
+        <img src="../../../assets/img/icones/codigo-de-barras-lido.png" style="width: 100px;">
     </div>
     <div class="painel">
-        <h4>Protocolos</h4>
-        <img src="../../../assets/img/farmacia.png" style="width: 50px; opacity: 70%;">
+        <h2>Protocolos</h2>
+        <img src="../../../assets/img/icones/fone-de-ouvido.png" style="width: 100px;">
     </div>
 
 
 </div>
+
  
