--- a/beneficiario/src/app/pages/home/home.component.scss
+++ b/beneficiario/src/app/pages/home/home.component.scss
@@ -11,49 +11,19 @@
 img{
 
     margin: 20px;
+    width: auto;
 }
 
 .painel{
     border-radius: 10px;
-    background-color: rgb(80, 131, 80);
+    background-color: #00A65A   ;
     padding: 15px;
-    width: 100px;
+    width: auto;
     height: 150px;
     margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
 
     
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-//novamente na de parecer que estou trabalhando por que estou com uma puta dor de cabeca que merda n aguento mais preciso urgente ir para casa caralho nmrl estou aqui igual um idiota sem fazer nada por que 
