--- a/beneficiario/src/app/layout/menu/menu.component.scss
+++ b/beneficiario/src/app/layout/menu/menu.component.scss
@@ -1,32 +1,28 @@
 /* Add a black background color to the top navigation */
-.topnav {
-    background-color: rgb(80, 131, 80);
+.navbar {
+    background-color:#00A65A;
     overflow: hidden;
     margin: auto;
     text-align: center;
     justify-content: center;
   }
   
-  /* Style the links inside the navigation bar */
-  .topnav a {
+
+  .navbar a {
     float: left;
-    color: #f2f2f2;
+    color: #ffffff;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
 
   }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-    border-radius: 10px;
+
+
+  .navbar a:hover {
+    background-color: #008549;
+    color: #ffffff;
+    border-radius: 5px;
   }
+
   
-  /* Add a color to the active/current link */
-  .topnav a.active {
-    background-color: #04AA6D;
-    color: white;
-  }
