--- a/beneficiario/src/app/pages/avisos/avisos.component.scss
+++ b/beneficiario/src/app/pages/avisos/avisos.component.scss
@@ -17,9 +17,10 @@ body{
     
 
     .card{ 
-        border-radius: 10px;
-        padding: 15px;
-        background-color: rgb(80, 131, 80);
+        border-radius: 5px;
+        padding: 10px;
+        padding-bottom: 30px;
+        background-color: #00A65A;
         justify-content: space-between;
         margin: auto;
         margin-top: 10px;
