--- a/beneficiario/src/styles.scss
+++ b/beneficiario/src/styles.scss
@@ -1,8 +1,15 @@
+
+// ---ICONES---
+// https://www.flaticon.com/br/icon-fonts-mas-baixados/4?weight=regular&type=uicon
+
+
+
+
 /* You can add global styles to this file, and also import other style files */
 body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: rgb(198, 255, 198);
+    background-color:#ECF0F5;
 }
 
