--- a/beneficiario/src/app/layout/footer/footer.component.html
+++ b/beneficiario/src/app/layout/footer/footer.component.html
@@ -26,6 +26,7 @@
     <div class="capsulas">
         <img src="../../../assets/img/certi-ANS.png" alt="">
         <h4> ANS: 0800-701-9656 / Nº 41901-0</h4>
+        <a href="https://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank"><img src="../../../assets/img/LGPD.png"  style="height: 70px;"></a>
 
     </div>    
 </div>
