--- a/beneficiario/src/app/pages/perfil/perfil.component.scss
+++ b/beneficiario/src/app/pages/perfil/perfil.component.scss
@@ -4,7 +4,16 @@
 
 
 .perfil{
-
+    width: 500px;
+    padding: 15px;
+    margin: auto;
+    margin-top: 50px;
     background-color: #d1ece0;
+    text-align: center;
+    border: 3px;
+    border-color: red;
+    border-width: 5px;
+    border-style: dotted;
+
 
 }
