--- a/beneficiario/src/app/pages/perfil/perfil.component.html
+++ b/beneficiario/src/app/pages/perfil/perfil.component.html
@@ -1,10 +1,13 @@
 <app-menu />
 
 <div class="perfil">
-    <h2>Atualizar Dados</h2>
+    <h2 style="text-align: center;">Atualizar Dados</h2>
+    <br><br>   
+    <h4>E-mail: acsvalefilho&#64;gmail.com</h4>
+    <h4>Telefone principal: (41) 9 9202-1603</h4>
+    <h4>Telefone secundário: (41) 9 9223-3007</h4>
+    <br><br>
+    <h6 style="color: rgb(167, 167, 167);">* Mantenha os seus dados sempre atualizados para uma melhor experiência junto ao ICS.</h6>
 
-    <h3>Email</h3>
-    <h4>acsvalefilho&#64;gmail.com</h4>
 
 </div>
- 
