--- a/beneficiario/src/app/pages/perfil/perfil.component.scss
+++ b/beneficiario/src/app/pages/perfil/perfil.component.scss
@@ -4,16 +4,15 @@
 
 
 .perfil{
-    width: 500px;
+    width: auto;
+
     padding: 15px;
     margin: auto;
     margin-top: 50px;
-    background-color: #d1ece0;
-    text-align: center;
-    border: 3px;
-    border-color: red;
-    border-width: 5px;
-    border-style: dotted;
-
+    margin-left: 30vw;
+    margin-right: 30vw;
+    text-align: left;    
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
 }
