--- a/beneficiario/src/app/pages/login/login.component.scss
+++ b/beneficiario/src/app/pages/login/login.component.scss
@@ -1,4 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
 .login-page {
   width: auto;
@@ -13,7 +12,7 @@
   margin: 0 auto 100px;
   padding: 45px;
   text-align: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .form input {
 
@@ -32,7 +31,7 @@
     margin: auto;
     text-transform: uppercase;
     outline: 0;
-    background: #4CAF50;
+    background: #00A65A;
     width: auto;
     border: 0;
     padding: 15px;
@@ -47,12 +46,8 @@
 }
 
 body {
-  background: #76b852; /* fallback for old browsers */
-  background: rgb(141,194,111);
-  background: linear-gradient(90deg, rgba(141,194,111,1) 0%, rgba(118,184,82,1) 50%);
-  font-family: "Roboto", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;      
+  background: #00A65A; /* fallback for old browsers */
+
 }
 
 .botoes{
@@ -63,8 +58,9 @@ body {
 }
 
 .esqueci{
-    color: gray;
+    color: lightgray;
     text-decoration: none;
     margin: auto;
     text-align: left;
+
 }
